--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,37 @@ body {
     font-weight: 400;
 }
 .jumbotron {
+/*
     background-color: #3EA2BB;
     color: #fff;
+*/
+    background: #1d6e93;
+    background: -moz-linear-gradient(top,  #1d6e93 0%, #70b1d1 100%, #23cae0 100%, #258cc4 100%);
+    background: -webkit-linear-gradient(top,  #1d6e93 0%,#70b1d1 100%,#23cae0 100%,#258cc4 100%);
+    background: linear-gradient(to bottom,  #1d6e93 0%,#70b1d1 100%,#23cae0 100%,#258cc4 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d6e93', endColorstr='#258cc4',GradientType=0);
+  
+    color: #fff;
+
+}
+h1 {
+    letter-spacing: -2px;
 }
 h1, h2 {
     font-weight: 300;
 }
+h2 {
+    color: #888;
+}
 a {
     color: #0E82A0;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+    font-size: smaller;
+    padding: 20px;
 }
